--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
 
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version> <!-- 根據你的需要選擇版本 -->
+			<scope>provided</scope> <!-- 設置為 provided，表示這個依賴在運行時由容器提供 -->
+		</dependency>
 
 		<dependency>
 			<groupId>com.cloudinary</groupId>
@@ -103,7 +109,8 @@
 			<artifactId>gson</artifactId>
 			<version>2.10.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.bettercloud/vault-java-driver -->
+		<!--
+		https://mvnrepository.com/artifact/com.bettercloud/vault-java-driver -->
 		<dependency>
 			<groupId>com.bettercloud</groupId>
 			<artifactId>vault-java-driver</artifactId>
