--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 
   	<filter>
     	<filter-name>AuthFilter</filter-name>
-    	<filter-class>com.laiutil.AuthFilterServlet</filter-class>
+    	<filter-class>com.outherutil.AuthFilterServlet</filter-class>
 	</filter>
 
   <welcome-file-list>
