--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,14 @@
 			<artifactId>vault-java-driver</artifactId>
 			<version>5.1.0</version>
 		</dependency>
+	
+		<!--WebSocket-->
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+		</dependency>
+
 
 	</dependencies>
 
